Related: fdo#47644 compound storage backend is poor at knowing stream size

Change-Id: Ie4aa6939f9f37e04fda5425a6e28c5d846a9cb62