tools/inc/tools/stream.hxx
@@ -374,7 +374,7 @@ public:
     sal_Size        SeekRel( sal_sSize nPos );
     sal_Size        Tell() const { return nBufFilePos+nBufActualPos;  }
     //length between current (Tell()) pos and end of stream
-    sal_Size        remainingSize();
+    virtual sal_Size remainingSize();
     void            Flush();
     sal_Bool        IsEof() const { return bIsEof; }
     // next Tell() <= nSize
@@ -789,6 +789,7 @@ public:
     sal_Bool            IsObjectMemoryOwner() { return bOwnsData; }
     void            SetResizeOffset( sal_Size nNewResize ) { nResize = nNewResize; }
     sal_Size            GetResizeOffset() const { return nResize; }
+    virtual sal_Size remainingSize() { return GetSize() - Tell(); }
 };
 
 // --------------------
